# kit-dashboard-facturas

./: .gitignore  BASELINE.md  CLAUDE.md  INSTRUCCIONES.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/dashboard-facturas/: SKILL.md
.claude/skills/dashboard-facturas/assets/: dashboard-template.html
.claude/skills/dashboard-facturas/assets/locales/: de.json  en.json  es.json  fr.json  it.json
.claude/skills/dashboard-facturas/references/: invoice-fields.md  iva-rules.md  locales-schema.md
.claude/skills/dashboard-facturas/scripts/: calculate-metrics.py  parse-invoices.py  render-dashboard.py
sample-outputs/: dashboard-de.html  dashboard-en.html  dashboard-es.html  dashboard-fr.html  dashboard-it.html  facturas_datos.json  metrics.json
tests/: SUBAGENT_TESTING.md  conftest.py  test_calculate_metrics.py  test_parse_invoices.py  test_render_dashboard.py  test_subagent_integration.py
