[project]
name = "kit-dashboard-facturas"
version = "0.1.0"
description = "Invoice Dashboard kit — multilingual financial dashboard from PDF invoices."
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --tb=short"

[dependency-groups]
test = [
  "pytest>=8.0",
  "pdfplumber>=0.11",
  "jinja2>=3.1",
  "babel>=2.14",
  "click>=8.1",
]
